Thu Jul 14 08:11:27 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset/codeset_export.h:
        * tao/Codeset/Codeset_Manager_i.cpp:
        * tao/Codeset/UTF16_BOM_Factory.cpp:
        * tao/Codeset/UTF8_Latin1_Factory.cpp:
        * tao/Codeset/UTF8_Latin1_Translator.cpp:

          Fixed more platform-specific errors.

Thu Jul 14 08:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.i:
          Removed not needed ;

Thu Jul 14 09:37:54 2005  Boris Kolpackov  <boris@kolpackov.net>

	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
	* orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:

	  Fixed a number of fuzz errors.

Wed Jul 13 21:51:15 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/ORB_Core.h:

          I forgot to take out the unneeded CORBA::Environment arg from
          load_codeset_manager. This was caught by a No Exceptions build.

Wed Jul 13 16:46:09 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/ETCL.mpc:

	  Added Header_Files, Inline_Files, and Template_Files sections
	  so headers and inlines are installed for the automake build.

Wed Jul 13 16:37:41 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset.mpc
        * tao/Codeset_Manager.cpp
        * tao/Codeset_Manager.h
        * tao/Codeset_Translator_Base.cpp
        * tao/Codeset_Translator_Base.h
        * tao/Codeset_Translator_Factory.h
        * tao/GIOP_Message_Base.cpp
        * tao/GIOP_Message_Lite.cpp
        * tao/IIOP_Acceptor.cpp
        * tao/ORB_Core.cpp
        * tao/ORB_Core.h
        * tao/ORB_Core.i
        * tao/Profile_Transport_Resolver.cpp
        * tao/Resource_Factory.cpp
        * tao/Resource_Factory.h
        * tao/Transport.cpp
        * tao/Transport.h
        * tao/Transport.inl
        * tao/default_resource.cpp
        * tao/default_resource.h
        * tao/orbconf.h
        * tao/params.cpp
        * tao/params.h
        * tao/params.i
        * tao/tao.mpc