@@ -22,18 +22,18 @@
 #if defined (TAO_CODESET_HAS_DLL) && (TAO_CODESET_HAS_DLL == 1)
 #  if defined (TAO_CODESET_BUILD_DLL)
 #    define TAO_Codeset_Export ACE_Proper_Export_Flag
-#    define TAO_SINGLETON_DECLARATION(T) ACE_EXPORT_SINGLETON_DECLARATION (T)
-#    define TAO_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_EXPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
-#  else /* TAO_BUILD_DLL */
+#    define TAO_CODESET_SINGLETON_DECLARATION(T) ACE_EXPORT_SINGLETON_DECLARATION (T)
+#    define TAO_CODESET_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_EXPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
+#  else /* TAO_CODESET_BUILD_DLL */
 #    define TAO_Codeset_Export ACE_Proper_Import_Flag
-#    define TAO_SINGLETON_DECLARATION(T) ACE_IMPORT_SINGLETON_DECLARATION (T)
-#    define TAO_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_IMPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
-#  endif /* TAO_BUILD_DLL */
-#else /* TAO_HAS_DLL == 1 */
+#    define TAO_CODESET_SINGLETON_DECLARATION(T) ACE_IMPORT_SINGLETON_DECLARATION (T)
+#    define TAO_CODESET_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_IMPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
+#  endif /* TAO_CODESET_BUILD_DLL */
+#else /* TAO_CODESET_HAS_DLL == 1 */
 #  define TAO_Codeset_Export
-#  define TAO_SINGLETON_DECLARATION(T)
-#  define TAO_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
-#endif /* TAO_HAS_DLL == 1 */
+#  define TAO_CODESET_SINGLETON_DECLARATION(T)
+#  define TAO_CODESET_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
+#endif /* TAO_CODESET_HAS_DLL == 1 */
 
 #endif /* TAO_CODESET_EXPORT_H */
 
